# qoregeo

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
qoregeo/: __init__.py  engine.py  exceptions.py  map_builder.py  utils.py
tests/: test_qoregeo.py
